Closed Bug 205981 Opened 23 years ago Closed 23 years ago

GetSystemFontInfo leaks a PangoFontDescription object

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dougt, Assigned: dougt)

References

Details

Attachments

(1 file, 1 obsolete file)

Despite pango's documemtation, you must call pango_font_description_free to free the descriptor created by pango_font_description_from_string.
Attached patch patch v0 (obsolete) — Splinter Review
Attachment #123530 - Attachment is obsolete: true
I still see a pango_x_font_map_for_display clean. This the fontmap really reference counted?a
Attachment #123534 - Flags: review?(blizzard)
OS: Windows XP → Linux
Attachment #123534 - Flags: review?(blizzard) → review?(blizzard)
Comment on attachment 123534 [details] [diff] [review] another leak fix included for no extra charge. r+sr=blizzard How bogus. Thanks for catching these.
Attachment #123534 - Flags: review?(blizzard) → review+
Comment on attachment 123534 [details] [diff] [review] another leak fix included for no extra charge. lets get this a'ed for 1.4.
Attachment #123534 - Flags: approval1.4?
Checking in nsDeviceContextGTK.cpp; /cvsroot/mozilla/gfx/src/gtk/nsDeviceContextGTK.cpp,v <-- nsDeviceContextGTK.cpp new revision: 1.116; previous revision: 1.115 done
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Attachment #123534 - Flags: approval1.4? → approval1.4+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: