GTK2 only fix.  Fixing two memory leaks. r=blizzard, b=205981, a=blizzard